k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-devsecops-app
  labels:
    app: fintech-devsecops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-devsecops-app
  template:
    metadata:
      labels:
        app: fintech-devsecops-app
    spec:
      containers:
      - name: fintech-devsecops-app
        image: docker.io/adrianomoretti/fintech-devsecops-app:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      # Adicione este bloco para autenticação no Docker Hub
      imagePullSecrets:
      - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-devsecops-app-service
spec:
  selector:
    app: fintech-devsecops-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
