k8s/kyc-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-service
  labels:
    app: kyc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-service
  template:
    metadata:
      labels:
        app: kyc-service
    spec:
      containers:
      - name: kyc-service
        image: docker.io/adrianomoretti/fintech-devsecops-app:kyc-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: kyc-service-service
spec:
  type: NodePort
  selector:
    app: kyc-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30011
